<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_graphs"
                android:title="@string/graphs"
                android:icon="@drawable/ic_home"
                />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_code"
                android:icon="@drawable/ic_code"
                android:title="@string/source_code" />
        </menu>
    </item>

</menu>
