<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.puzz.graphanything.activities.GraphEntryActivity">

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:onClick="onSave"
        />

    <item
        android:id="@+id/clone_entry"
        android:title="@string/clone_entry"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:onClick="onClone"
        />

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="20"
        app:showAsAction="never"
        android:onClick="onDelete"
        />

</menu>
