<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.puzz.graphanything.activities.GraphListActivity">

    <item
        android:id="@+id/action_new_graph"
        android:title="@string/action_new"
        android:icon="@drawable/ic_add"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:onClick="newGraph" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:onClick="onShowSettings" />

    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        android:icon="@drawable/ic_question_mark"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:onClick="showInfo" />

</menu>
